# plotters-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  draw_gates.rs  justfile  zzz.txt
.cargo/: config.toml
assets/: gate_sidebar.css  main_window.css  navbar.css  plot_window.css  searchable_select.css  spinner.css
demo/: Cargo.toml  Dioxus.toml
demo/src/: main.rs
fcs-rs-2/: Cargo.toml
fcs-rs-2/src/: data.rs
gui/: Cargo.toml
gui/assets/: styles.css
gui/src/: file_load.rs  gate_store.rs  lib.rs  main copy.rs  main.rs
plotters-dioxus/: Cargo.toml
plotters-dioxus/src/: colormap.rs  densityplot.rs  lib.rs  plotter.rs
src/: file_load.rs  gate_store.rs  lib.rs  main.rs  searchable_select.rs
src/components/: mod.rs
src/components/context_menu/: component.rs
src/components/sidebar/: style.css
src/gate_editor/: axis_info.rs  gate_sidebar.rs  macros.rs  main_window.rs  mod.rs  route.rs
src/gate_editor/gates/: draw_gates.rs  gate_buttons.rs  gate_draft.rs  gate_drag.rs  gate_filtering.rs  gate_hierarchy.rs  gate_stats.rs  gate_store.rs  gate_traits.rs  gate_types.rs  mod.rs
src/gate_editor/gates/gate_composite/: bisector_gate.rs  mod.rs  quadrant_gate.rs  skewed_quadrant_gate.rs
src/gate_editor/gates/gate_single/: boolean_gates.rs  ellipse_gate.rs  line_gate.rs  mod.rs  polygon_gate.rs  rectangle_gate.rs
src/gate_editor/plots/: axis_store.rs  data_helpers.rs  draw_plot.rs  mod.rs  parameters.rs  plot_store.rs  plot_window.rs
src/gate_move/: density_grid.rs  kde.rs  kde_shift.rs  mod.rs
src/omiq/: decode.rs  deserialise.rs  metadata.rs  mod.rs
src/plotters_dioxus/: axis_info.rs  draw_gates.rs  draw_plot.rs  gate_draft.rs  gate_helpers.rs  gate_sidebar.rs  macros.rs  mod.rs  plot_helpers.rs  plot_window.rs  plotter.rs  route.rs  traits.rs
src/plotters_dioxus/gates/: gate_buttons.rs  gate_composite.rs  gate_draft.rs  gate_drag.rs  gate_filtering.rs  gate_final.rs  gate_single.rs  gate_stats.rs  gate_store.rs  gate_styles.rs  gate_traits.rs  gate_types.rs  mod.rs
src/plotters_dioxus/gates/gate_composite/: bisector_gate.rs  mod.rs  quadrant_gate.rs  skewed_quadrant_gate.rs
src/plotters_dioxus/gates/gate_draw_helpers/: ellipse.rs  line.rs  mod.rs  polygon.rs  rectangle.rs
src/plotters_dioxus/gates/gate_single/: boolean_gates.rs  ellipse_gate.rs  line_gate.rs  mod.rs  polygon_gate.rs  rectangle_gate.rs
src/plotters_dioxus/plots/: data_helpers.rs  mod.rs  parameters.rs  plot_window.rs
src/serialise/: mod.rs  omiq.rs
