[package]
name = "clingate"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
dioxus = { version = "0.7.3", features = ["router"] }
plotters = "0.3.5"
thiserror = "2.0.12"
tokio = { version = "1", default-features = false, features = ["macros", "sync", "rt-multi-thread"] }
anyhow = "1"
flow-fcs = {git="https://github.com/jrmoynihan/flow", rev="44a0537"}
flow-plots = {git="https://github.com/jrmoynihan/flow", rev="44a0537"}
flow-gates = {git="https://github.com/jrmoynihan/flow", rev="44a0537"}
base64 = "0.22.1"
plotters-bitmap = "0.3.3"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
rustc-hash = "2.1"
indexmap = "2.1"
polars = {version = "0.53", default-features = false, features = ["lazy", "performant"]}
rayon = "1"


[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]