[package]
name = "clingate"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
dioxus = { version = "0.7.4", features = ["router"] }
thiserror = "2.0.12"
tokio = { version = "1", default-features = false, features = ["macros", "sync", "rt-multi-thread"] }
anyhow = "1"
flow-fcs = { git = "https://github.com/czarop/flow" }
flow-plots = { git = "https://github.com/czarop/flow", default-features = false }
flow-gates = { git = "https://github.com/czarop/flow" }
base64 = "0.22.1"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
rustc-hash = "2.1"
indexmap = "2.1"
polars = {version = "0.53", default-features = false, features = ["lazy", "performant", "csv", "temporal"]}
rayon = "1"
im = "15"
uuid = { version = "1.0", features = ["v4"] }
serde = {version = "1"}
serde_json = "1"
itertools = "0.14.0"
rustfft = "^6.4"
rand = "0.8"
rand_distr = "0.4"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
