[package]
name = "demo"
version = "0.1.0"
edition = "2024"
resolver = "1"

[dependencies.plotters-dioxus]
path = "../plotters-dioxus"

[dependencies.fcs-rs-2]
path = "../fcs-rs-2"

[dependencies]
dioxus.workspace = true
polars.workspace = true
plotters.workspace = true
# rand = "0.8.3"
# rand_distr = "0.4.3"
# rand_xorshift = "0.3.0"
tokio.workspace = true

