[package]
name = "gui"
version = "0.1.0"
edition = "2024"
resolver = "1"

[dependencies.plotters-dioxus]
path = "../plotters-dioxus"

[dependencies]
dioxus.workspace = true
polars.workspace = true
plotters.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
fcs-rs-2.workspace = true