[package]
name = "gui"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies.plotters-dioxus]
path = "../plotters-dioxus"

[dependencies]
dioxus.workspace = true
polars.workspace = true
plotters.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
flow-fcs.workspace = true
flow-gates.workspace = true

[target.'cfg(windows)'.dependencies]
polars = {version = "0.52", default-features = false, features = ["lazy", "performant", "timezones"]}
[target.'cfg(not(windows))'.dependencies]
polars = {version = "0.52", default-features = false, features = ["lazy", "performant", "dtype-full"]}