[package]
name = "plotters-dioxus"
version = "0.1.0"
edition = "2024"
resolver = "1"


[dependencies]
dioxus = { version = "0.7.0-alpha.1", features = [] }
# dioxus-desktop = "0.5.6"
plotters = "0.3.5"
base64 = "0.22.1"
plotters-bitmap = "0.3.3"
image = "0.25.6"


[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
