[package]
name = "plotters-dioxus"
version = "0.1.0"
edition = "2024"
resolver = "1"

[dependencies]
dioxus.workspace = true
plotters.workspace = true
base64 = "0.22.1"
plotters-bitmap = "0.3.3"
image = "0.25.6"
fcs-rs-2.workspace = true
ndarray.workspace = true
ndarray-ndimage.workspace = true
rayon = "1.7"
png = "0.18.0"
flow-plots.workspace = true